# StreamFX-Public

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  AUTHORS.md  BUILDING.md  CMakeLists.txt  CNAME  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.ad  README.adoc  README.md  appveyor.yml  crowdin.yml  index.html  install.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature.md  feature.yml  feedback.md  help.md  issue.md  issue.yml
.github/PULL_REQUEST_TEMPLATE/: config.yml  feature.md  feature.yml  fix.md  fix.yml
.github/workflows/: authors.yml  codeql-analysis.yml  main.yml  nightly.yml  validate.yml
.hooks/pre-commit/: clang-format.sh
ci/: appveyor-build.bat  appveyor-build.js  appveyor-install.bat  appveyor-package.bat  builder.js  installer.iss.in  make.bat  packager.js  runner.js
cmake/: ClangToolkit.cmake  DownloadProject.CMakeLists.cmake.in  cppcheck.cmake  installer.iss.in  module.cpp.in  util.cmake  version.hpp.in  version.rc.in
cmake/modules/: Architecture.cmake  FindAOM.cmake  FindFFmpeg.cmake  FindNVAR.cmake
components/autoframing/: CMakeLists.txt
components/blur/: CMakeLists.txt
components/color-grade/: CMakeLists.txt
components/denoising/: CMakeLists.txt
components/dynamic-mask/: CMakeLists.txt
components/ffmpeg/: CMakeLists.txt
components/mirror/: CMakeLists.txt
components/nvidia/: CMakeLists.txt
components/sdf-effects/: CMakeLists.txt
components/shader/: CMakeLists.txt
components/transform/: CMakeLists.txt
components/upscaling/: CMakeLists.txt
components/virtual-greenscreen/: CMakeLists.txt
data/: thanks.json
data/effects/: bilateral-blur.effect  blur.effect  box-blur.effect  channel-mask.effect  color-conversion.effect  color-grade.effect  color_conversion_rgb_hsl.effect  color_conversion_rgb_hsv.effect  color_conversion_rgb_yuv.effect  displace.effect  gaussian-blur.effect  lut-consumer.effect  lut-producer.effect  lut.effect  mask.effect  mip-mapper.effect  mipgen.effect  pack-unpack.effect  sdf-generator.effect  sdf-shadow.effect  shared.effect  standard.effect  swirl.effect  transform.effect  virtual-greenscreen.effect
data/filter-blur/: filter.effect  gaussian.effect
data/locale/: ar-SA.ini  bg-BG.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-GB.ini  en-US.ini  es-ES.ini  et-EE.ini  fi-FI.ini  fr-FR.ini  hu-HU.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  no-NO.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  si-LK.ini  sr-SP.ini  sv-SE.ini  th-TH.ini  tr-TR.ini  uk-UA.ini  zh-CN.ini  zh-TW.ini
media/: README.md
patches/obs-studio/: 0001-cmake-Disable-invalid-flags-on-universal-build.patch  0002-cmake-Disable-Werror-and-WX-on-all-compilers.patch
source/: common.hpp  configuration.cpp  configuration.hpp  filter-blur.cpp  filter-blur.h  filter-blur.hpp  filter-custom-shader.cpp  filter-custom-shader.h  filter-custom-shader.hpp  filter-displacement.cpp  filter-displacement.h  filter-displacement.hpp  filter-sdf-effects.cpp  filter-sdf-effects.hpp  filter-shadow-sdf.cpp  filter-shadow-sdf.hpp  filter-shape.cpp  filter-shape.h  filter-shape.hpp  filter-transform.cpp  filter-transform.h  filter-transform.hpp  gfx-effect-source.cpp  gfx-effect-source.h  gfx-effect-source.hpp  gfx-source-texture.cpp  gfx-source-texture.h  gfx-source-texture.hpp  gs-effect.cpp  gs-effect.h  gs-effect.hpp  gs-helper.cpp  gs-helper.h  gs-helper.hpp  gs-indexbuffer.cpp  gs-indexbuffer.h  gs-indexbuffer.hpp  gs-limits.h  gs-limits.hpp  gs-mipmapper.cpp  (+55 more)
source/encoders/: encoder-aom-av1.cpp  encoder-aom-av1.hpp  encoder-ffmpeg.cpp  encoder-ffmpeg.hpp  encoder.cpp  encoder.hpp  ffmpeg-encoder.cpp  ffmpeg-encoder.hpp
source/ffmpeg/: avframe-queue.cpp  avframe-queue.hpp  swscale.cpp  swscale.hpp  tools.cpp  tools.hpp
source/filters/: filter-autoframing.cpp  filter-autoframing.hpp  filter-blur.cpp  filter-blur.hpp  filter-color-grade.cpp  filter-color-grade.hpp  filter-custom-shader.cpp  filter-custom-shader.hpp  filter-denoising.cpp  filter-denoising.hpp  filter-displacement.cpp  filter-displacement.hpp  filter-dynamic-mask.cpp  filter-dynamic-mask.hpp  filter-nv-face-tracking.cpp  filter-nv-face-tracking.hpp  filter-sdf-effects.cpp  filter-sdf-effects.hpp  filter-shader.cpp  filter-shader.hpp  filter-shape.cpp  filter-shape.hpp  filter-transform.cpp  filter-transform.hpp  filter-upscaling.cpp  filter-upscaling.hpp  filter-video-superresolution.cpp  filter-video-superresolution.hpp  filter-virtual-greenscreen.cpp  filter-virtual-greenscreen.hpp
source/gfx/: gfx-debug.cpp  gfx-debug.hpp  gfx-effect-source.cpp  gfx-effect-source.hpp  gfx-mipmapper.cpp  gfx-mipmapper.hpp  gfx-opengl.cpp  gfx-opengl.hpp  gfx-source-texture.cpp  gfx-source-texture.hpp  gfx-util.cpp  gfx-util.hpp
source/obs/: obs-encoder-factory.cpp  obs-encoder-factory.hpp  obs-signal-handler.cpp  obs-signal-handler.hpp  obs-source-active-child.cpp  obs-source-active-child.hpp  obs-source-active-reference.cpp  obs-source-active-reference.hpp  obs-source-factory.cpp  obs-source-factory.hpp  obs-source-showing-reference.cpp  obs-source-showing-reference.hpp  obs-source-tracker.cpp  obs-source-tracker.hpp  obs-source.cpp  obs-source.hpp  obs-tools.cpp  obs-tools.hpp  obs-weak-source.cpp  obs-weak-source.hpp
source/sources/: source-mirror.cpp  source-mirror.hpp  source-shader.cpp  source-shader.hpp
source/transitions/: transition-shader.cpp  transition-shader.hpp
source/ui/: ui-about-entry.cpp  ui-about-entry.hpp  ui-about.cpp  ui-about.hpp  ui-common.hpp  ui-obs-browser-widget.cpp  ui-obs-browser-widget.hpp  ui-setup.cpp  ui-setup.hpp  (+4 more)
templates/: config.hpp.in  installer-signed.iss.in  installer.iss.in  installer.pkgproj.in  module.cpp.in  version.hpp.in  version.rc.in
tools/: .gitignore  argparse.sh  buildspec.js  convert-patreon-csv.js  copyright.js  generate-contributors.js  make-solutions.bat  package-lock.json  package.json  patch-supporters-patreon.json
ui/: about-entry.ui  about.ui  setup.ui  streamfx.qrc  updater.ui
(+319 files in other folders)
